--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>happy 3 months!</h1>
     <div class="center-container"></div>
-        <button type="button" onclick="alert('yay 😁')">
+        <button type="button" onclick="alert('i love you! 😁')">
       click me pretty please 🥺
         </button>
     </div>
